--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/javascript" src="./js/libs/highlight/highlight.pack.js"></script>
   </head>
 </head>
-<main class="main-content">
+<main class="main-content home">
   <div class="container">
     <h1 class="title home-title">Welcome to our HTML/CSS tutorial</h1>
     <h2 class="subtitle">Lorem ipsum dolor</h2>
