--- a/measurement.html
+++ b/measurement.html
@@ -33,7 +33,7 @@
         <li><a class="nav-link" href="#">Спрайти</a></li>
       </ol>
     </nav>
-    <main class="main-content">
+    <main class="main-content css-tutorial">
       <div class="container">
         <div class="measure-wrap">
           <h1 class="main-title">Одиниці виміру</h1>
