--- a/position.html
+++ b/position.html
@@ -33,7 +33,7 @@
         <li><a class="nav-link" href="#">Спрайти</a></li>
       </ol>
     </nav>
-    <main class="main-content">
+    <main class="main-content css-tutorial">
       <div class="container">
         <div class="position">
           <h1 class="title">Властивість <code>position</code></h1>
