--- a/selectors.html
+++ b/selectors.html
@@ -33,7 +33,7 @@
         <li><a class="nav-link" href="#">Спрайти</a></li>
       </ol>
     </nav>
-    <main class="main-content">
+    <main class="main-content css-tutorial">
       <div class="selectors">
         <h1 class="title">Селектори</h1>
         <div class="selector-example"><span>.class {<br>&emsp;color: red;<br>&emsp;font-size: 18px;<br>}</span><span>p.class {<br>&emsp;color: green;<br>&emsp;font-size: 16px;<br>}</span></div>
