--- a/transform.html
+++ b/transform.html
@@ -33,7 +33,7 @@
         <li><a class="nav-link" href="#">Спрайти</a></li>
       </ol>
     </nav>
-    <main class="main-content">
+    <main class="main-content css-tutorial">
       <div class="container">
         <div class="transform">
           <h1 class="title"><code>transform</code></h1>
