--- a/block_style.html
+++ b/block_style.html
@@ -33,7 +33,7 @@
         <li><a class="nav-link" href="#">Спрайти</a></li>
       </ol>
     </nav>
-    <main class="main-content">
+    <main class="main-content css-tutorial">
       <div class="container">
         <div class="block-style">
           <h1 class="title">Стилізація блоків</h1>
