--- a/animations.html
+++ b/animations.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
     <title>CSS</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./js/libs/highlight/styles/monokai-sublime.css">
     <script type="text/javascript" src="./js/libs/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="./js/libs/jquery/jquery.mousewheel.min.js"></script>
@@ -34,19 +35,6 @@
       </ol>
     </nav>
     <main class="main-content css-tutorial">
-      <section class="aside-bar">
-        <ul class="theme-list">
-          <li><a class="theme-item" href="#animation-name">animation-name</a></li>
-          <li><a class="theme-item" href="#animation-duration">animation-duration</a></li>
-          <li><a class="theme-item" href="#animation-timing">animation-timing</a></li>
-          <li><a class="theme-item" href="#animation-delay">animation-delay</a></li>
-          <li><a class="theme-item" href="#animation-count">animation-count</a></li>
-          <li><a class="theme-item" href="#animation-direction">animation-direction</a></li>
-          <li><a class="theme-item" href="#3danimations">3d-animation</a></li>
-          <li><a class="theme-item" href="#perspective-origin">Topic test</a></li>
-        </ul>
-        <div class="slide-btn"></div>
-      </section>
       <div class="container">
         <div class="animations">
           <div class="animation-sample">
@@ -560,6 +548,18 @@
           </div>
         </div>
       </div>
+      <section class="aside-bar">
+        <ul class="theme-list">
+          <li class="theme-item"><a href="#animation-name">animation-name</a></li>
+          <li class="theme-item"><a href="#animation-duration">animation-duration</a></li>
+          <li class="theme-item"><a href="#animation-timing">animation-timing</a></li>
+          <li class="theme-item"><a href="#animation-delay">animation-delay</a></li>
+          <li class="theme-item"><a href="#animation-count">animation-count</a></li>
+          <li class="theme-item"><a href="#animation-direction">animation-direction</a></li>
+          <li class="theme-item"><a href="#3danimations">3d-animation</a></li>
+        </ul>
+        <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
+      </section>
     </main>
     <script src="./js/libs/jquery/jquery.min.js"></script>
     <script src="./js/main.js"></script>
