--- a/flexbox.html
+++ b/flexbox.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
     <title>CSS</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./js/libs/highlight/styles/monokai-sublime.css">
     <script type="text/javascript" src="./js/libs/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="./js/libs/jquery/jquery.mousewheel.min.js"></script>
@@ -61,14 +62,14 @@
             <div class="flex-element">1</div>
           </div>
           <div class="description">
-            <h2>Ідея <code>flexbox</code></h2>
+            <h2 id="idea-of_flexbox">Ідея <code>flexbox</code></h2>
             <p>В основі ідеї <code>flexbox</code>, лежить ідея осей:</p><img class="flex-image" src="img/flexbox.png">
             <p>Якщо, всередині флекс-контейнеру, знаходиться текст або зображення без обгортки, то такі елементи стають анонімними флекс-елементами. Текст вирівнюється по верхньому краю, а зображення за стає рівним висоті блоку.</p>
             <div class="flex-container"><img src="img/s2.png">anonymous lupus
               <div class="flex-element">thin</div>
               <div class="flex-element">1</div>
             </div>
-            <h2>Вирівнювання елементів по горизонталі <code>justify-content</code></h2>
+            <h2 id="justify-content">Вирівнювання елементів по горизонталі <code>justify-content</code></h2>
             <p>Властивість вирівнює флекс-елементи по-ширині контейнеру, розділяючи вільний простір між елементами. Для їх вирівнювання по-вертикалі використовують <code>align-content</code>.</p>
             <table class="table striped">
               <colgroup>
@@ -124,7 +125,7 @@
                 }
               </figure>
             </p>
-            <h2>Вирівнювання елементів по вертикалі <code>align-items</code></h2>
+            <h2 id="align-items">Вирівнювання елементів по вертикалі <code>align-items</code></h2>
             <p>Властивість вирівнює флекс-елементи, в тому числі і анонімні по перендикулярній осі.</p>
             <table class="table striped" style="margin: 1rem 0; width: 100%;">
               <colgroup>
@@ -181,7 +182,7 @@
                 }
               </figure>
             </p>
-            <h2><code>flex-direction</code> напрямок головної осі</h2>
+            <h2 id="flex-direction"><code>flex-direction</code> напрямок головної осі</h2>
             <p>Властивість визначає, яким чином флекс-елементи вкладаються у флекс-контейнер. Флекс-елементи можуть розташовуватись у двох напрямках: горизонтально, як строки, або вертикально, як колонки.</p>
             <table class="table striped">
               <colgroup>
@@ -233,7 +234,7 @@
                 }
               </figure>
             </p>
-            <h2><code>flex-wrap</code> багатостроковість флекс-елементів</h2>
+            <h2 id="flex-wrapping"><code>flex-wrap</code> багатостроковість флекс-елементів</h2>
             <p>Властивість визначає, яким чином флекс-елементи будуть вистраюватись, в одну строку, або переноситись на іншу при не достачі місця. За замовчуванням всі елементи вистраюються в одну строку та заповнюють весь доступний простір контейнеру. У випадку фіксованої ширини контейнеру, флекс-елементи беззсовісно вилазять за його межі.</p>
             <table class="table striped">
               <colgroup>
@@ -285,7 +286,7 @@
                 }
               </figure>
             </p>
-            <h2><code>flex-flow</code> - це короткий запис для напрямку осі та багатостроковості флекс-контейнеру</h2>
+            <h2 id="flex-flow"><code>flex-flow</code> - це короткий запис для напрямку осі та багатостроковості флекс-контейнеру</h2>
             <p>Перше значення цієї властивості визначає напрямок осі, а друге перенос елементів.</p>
             <p>Синтаксис:
               <figure class="code">
@@ -295,7 +296,7 @@
                 }
               </figure>
             </p>
-            <h2><code>align-content</code> багатострокове вирівнювання</h2>
+            <h2 id="align-content"><code>align-content</code> багатострокове вирівнювання</h2>
             <p>Властивість вирівнює строки по вертикалі у флекс-контейнері, дозволяючи керувати вільним простором. <b color="red">Увага!!!</b> Дана властивість працює тільки в тому випадку, якщо перенос строк дозволений, вказаний напрямок головної осі та задана висота контейнеру.</p>
             <table class="table striped">
               <colgroup>
@@ -359,7 +360,7 @@
               </figure>
             </p>
             <p style="font-size: 24px;"><b>Властивості flex-елементів</b></p>
-            <h2><code>order</code> порядок відображення елементів</h2>
+            <h2 id="ordering"><code>order</code> порядок відображення елементів</h2>
             <p>Властивість визначає порядок у якому будуть відображатись флекс-елементи. По дефолту заданий порядок дорівнює: 0.</p>
             <table class="table striped">
               <colgroup>
@@ -391,7 +392,7 @@
                 }
               </figure>
             </p>
-            <h2><code>flex-basis</code> базова ширина елементу</h2>
+            <h2 id="flex-basis"><code>flex-basis</code> базова ширина елементу</h2>
             <p>Властивість дозволяє задати базову ширину флекс-елементу, відносно якої буде відбуватись його розтягнення <code>flex-grow</code>, або ж його звуження <code>flex-shrink</code>.</p>
             <table class="table striped">
               <colgroup>
@@ -429,7 +430,7 @@
                 }
               </figure>
             </p>
-            <h2><code>flex-grow</code> Розтягання елементів</h2>
+            <h2 id="flex-grow"><code>flex-grow</code> Розтягання елементів</h2>
             <p>властивість визначає коефіціент збільшення ширини флекс-елементу, відносно інших флекс елементів.</p>
             <table class="table striped">
               <colgroup>
@@ -449,22 +450,18 @@
                 <td><code>inherit</code></td>
                 <td>Наслідує від батьківського елементу</td>
               </tr>
-              <tr>
-                <td colspan="100">
-                  <div class="flex-container unsized">
-                    <div class="flex-element sized thin" id="flex-grow-1">grow:
-                      <p class="flex-togglerGrow-1"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
-                    </div>
-                    <div class="flex-element sized thin" id="flex-grow-2">grow:
-                      <p class="flex-togglerGrow-2"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
-                    </div>
-                    <div class="flex-element sized thin" id="flex-grow-3">grow:
-                      <p class="flex-togglerGrow-3"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
-                    </div>
-                  </div>
-                </td>
-              </tr>
             </table>
+            <div class="flex-container unsized">
+              <div class="flex-element sized thin" id="flex-grow-1">grow:
+                <p class="flex-togglerGrow-1"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
+              </div>
+              <div class="flex-element sized thin" id="flex-grow-2">grow:
+                <p class="flex-togglerGrow-2"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
+              </div>
+              <div class="flex-element sized thin" id="flex-grow-3">grow:
+                <p class="flex-togglerGrow-3"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
+              </div>
+            </div>
             <p>Синтаксис:
               <figure class="code">
                 <span class="nc">.selector</span>&emsp;{
@@ -476,7 +473,7 @@
                 }
               </figure>
             </p>
-            <h2><code>flex-shrink</code> звуження елементів</h2>
+            <h2 id="flex-shrink"><code>flex-shrink</code> звуження елементів</h2>
             <p>Властивість вказує коефіціент звуження флекс-елементу відносно інших. Працює лише у випадку, якщо для елементу задана ширина <code>flex-basis</code>, або <code>width</code></p>
             <table class="table striped">
               <colgroup>
@@ -496,22 +493,18 @@
                 <td><code>inherit</code></td>
                 <td>Наслідує від батьківського елементу</td>
               </tr>
-              <tr>
-                <td colspan="100">
-                  <div class="flex-container unsized">
-                    <div class="flex-element sized wide" id="flex-shrink-1">shrink:
-                      <p class="flex-togglerGrow-1"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
-                    </div>
-                    <div class="flex-element sized wide" id="flex-shrink-2">shrink:
-                      <p class="flex-togglerGrow-2"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
-                    </div>
-                    <div class="flex-element sized wide" id="flex-shrink-3">shrink:
-                      <p class="flex-togglerGrow-3"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
-                    </div>
-                  </div>
-                </td>
-              </tr>
             </table>
+            <div class="flex-container unsized">
+              <div class="flex-element sized wide" id="flex-shrink-1">shrink:
+                <p class="flex-togglerGrow-1"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
+              </div>
+              <div class="flex-element sized wide" id="flex-shrink-2">shrink:
+                <p class="flex-togglerGrow-2"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
+              </div>
+              <div class="flex-element sized wide" id="flex-shrink-3">shrink:
+                <p class="flex-togglerGrow-3"><a href="javascript:;" data-value="3">3</a> <a href="javascript:;" data-value="5">5</a> <a href="javascript:;" data-value="10">10</a>  <a href="javascript:;" data-value="8">8</a> <a href="javascript:;" data-value="initial">initial</a></p>
+              </div>
+            </div>
             <p>Синтаксис:
               <figure class="code">
                 <span class="nc">.selector</span>&emsp;{
@@ -523,7 +516,7 @@
                 }
               </figure>
             </p>
-            <h2>Одна властивість для задання базової ширини та трансформації елементу: <code>flex</code></h2>
+            <h2 id="flex">Одна властивість для задання базової ширини та трансформації елементу: <code>flex</code></h2>
             <p>Властивість являє собою короткий запис трьох властивостей: <code>flex-grow</code>, <code>flex-shrink</code>, <code>flex-basis</code>. Дефолтне значення <code>flex: 0 1 auto;</code>. Задається числовим значенням або ключовими словами <code>none</code>, <code>auto</code></p>
             <table class="table striped">
               <colgroup>
@@ -566,6 +559,23 @@
           </div>
         </div>
       </div>
+      <section class="aside-bar">
+        <ul class="theme-list">
+          <li class="theme-item"><a href="#idea-of_flexbox">Ідея flexbox</a></li>
+          <li class="theme-item"><a href="#justify-content">justify-content</a></li>
+          <li class="theme-item"><a href="#align-items">align-items</a></li>
+          <li class="theme-item"><a href="#flex-direction">flex-direction</a></li>
+          <li class="theme-item"><a href="#flex-wrapping">flex-wrap</a></li>
+          <li class="theme-item"><a href="#flex-flow">flex-flow</a></li>
+          <li class="theme-item"><a href="#align-content">align-content</a></li>
+          <li class="theme-item"><a href="#ordering">order</a></li>
+          <li class="theme-item"><a href="#flex-basis">flex-basis</a></li>
+          <li class="theme-item"><a href="#flex-grow">flex-grow</a></li>
+          <li class="theme-item"><a href="#flex-shrink ">flex-shrink</a></li>
+          <li class="theme-item"><a href="#flex">flex</a></li>
+        </ul>
+        <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
+      </section>
     </main>
     <script src="./js/libs/jquery/jquery.min.js"></script>
     <script src="./js/main.js"></script>
