--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no"/>
     <title>CSS</title>
     <link rel="stylesheet" href="./css/main.css"/>
+    <link rel="stylesheet" href="./css/font-awesome.min.css"/>
     <link rel="stylesheet" href="./js/libs/highlight/styles/monokai-sublime.css"/>
     <script type="text/javascript" src="./js/libs/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="./js/libs/jquery/jquery.mousewheel.min.js"></script>
@@ -21,19 +22,26 @@
     <h2 class="subtitle">Lorem ipsum dolor</h2>
     <div class="home-card_wrapper">
       <div class="home-card">
-        <h2 class="card-title"><a href="html/index.html">HTML</a></h2>
-        <ul class="theme-list" rel="slickScroll">
-          <li class="theme-item"><a href="#"></a></li>
-          <li class="theme-item"><a href="#"></a></li>
-          <li class="theme-item"><a href="#"></a></li>
-          <li class="theme-item"><a href="#"></a></li>
-          <li class="theme-item"><a href="#"></a></li>
-          <li class="theme-item"><a href="#"></a></li>
+        <h2 class="card-title"><a href="./html/html/index.html">HTML</a></h2>
+        <ul class="theme-list">
+          <li class="theme-item"><a href="./hyperlinks.html">Ссилка</a></li>
+          <li class="theme-item"><a href="./html/html/attr.html">Атрибути</a></li>
+          <li class="theme-item"><a href="./html/html/h.html">Заголовки</a></li>
+          <li class="theme-item"><a href="./html/html/img-audio-video.html">Аудіо/Відео</a></li>
+          <li class="theme-item"><a href="./html/html/index.html">Структура</a></li>
+          <li class="theme-item"><a href="./html/html/input-textarea-btn.html">Інпути/Кнопки</a></li>
+          <li class="theme-item"><a href="./html/html/link-script.html">Зовнішнє підключення/Тег <code>&lt;script&gt;</code></a></li>
+          <li class="theme-item"><a href="./html/html/lists.html">Списки</a></li>
+          <li class="theme-item"><a href="./html/html/meta.html"><code>&lt;meta&gt;</code></a></li>
+          <li class="theme-item"><a href="./html/html/semantics.html">Семантика</a></li>
+          <li class="theme-item"><a href="./html/html/symbols.html">Сімволи Unicode</a></li>
+          <li class="theme-item"><a href="./html/html/table-form.html">Форми/Таблиці</a></li>
+          <li class="theme-item"><a href="./html/html/tags.html">Теги</a></li>
         </ul>
       </div><img class="home-image" src="./img/fon1.png"/>
       <div class="home-card">
         <h2 class="card-title"><a href="./css_boxmodel.html">CSS</a></h2>
-        <ul class="theme-list" rel="slickScroll">
+        <ul class="theme-list">
           <li class="theme-item"><a href="./css_boxmodel.html">CSS Box Model</a></li>
           <li class="theme-item"><a href="./measurement.html">Одиниці виміру</a></li>
           <li class="theme-item"><a href="./selectors.html">Селектори, Псевдокласи</a></li>
