--- a/position.html
+++ b/position.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
     <title>CSS</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
     <link rel="stylesheet" href="./js/libs/highlight/styles/monokai-sublime.css">
     <script type="text/javascript" src="./js/libs/jquery/jquery.min.js"></script>
     <script type="text/javascript" src="./js/libs/jquery/jquery.mousewheel.min.js"></script>
@@ -38,12 +39,12 @@
         <div class="position">
           <h1 class="title">Властивість <code>position</code></h1>
           <p>Властивість <code>position</code> визначає тип методу позиціонування для елемента (<code>static</code>, <code>relative</code>, <code>fixed</code>, <code>absolute</code>).</p>
-          <h2>static</h2>
+          <h2 class="title" id="static">static</h2>
           <figure class="code"><pre><code><span class="nc">.static</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">: </span><span class="nb">static</span><span class="p">;</span><br><span class="p">}</span></code></pre></figure>
           <div class="visual"><span class="label">&lt;div class="static"&gt;</span>
             <p><code>static</code> є значенням за замовчуванням. Елемент з <code>position: static;</code> відображається як звичайно і не буде позиціонуватися будь-яким особливим способом.</p><span class="label">&lt;/div&gt;</span>
           </div>
-          <h2>relative</h2>
+          <h2 class="title" id="relative">relative</h2>
           <figure class="code"><pre><code><span class="nc">.relative1</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">relative</span><span class="p">;</span><br><span class="p">}</span><br><br><span class="nc">.relative2</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">relative</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">top</span><span class="p">:</span> <span class="m">-20px</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">left</span><span class="p">:</span> <span class="m">20px</span><span class="p">;</span><span class="nl"><br><span class="p">}</span></code></pre></figure>
           <div class="visual"><span class="label">&lt;div class="relative1"&gt;</span>
             <p><code>relative</code> поводиться в точності як <code>static</code> але лише до тих пір, поки ви не додасте деякі додаткові властивості.</p><span class="label">&lt;/div&gt;</span>
@@ -54,7 +55,7 @@
           <div class="visual"><span class="label">&lt;div&gt;</span>
             <p>наступний блок</p><span class="label">&lt;/div&gt;</span>
           </div>
-          <h2>fixed</h2>
+          <h2 class="title" id="fixed">fixed</h2>
           <p>Фіксоване позиціювання елемента щодо вікна браузера. Елемент завжди займає одне і теж місце навіть при прокручуванні сторінки, немов він приклеєний до екрану. Також як і для <code>relative</code>, додаткові властивості <code>top</code>, <code>right</code>, <code>bottom</code>, и <code>left</code> для даного позиціонування працюватимуть.</p>
           <figure class="code"><pre><code class="language-css" data-lang="css"><span class="nc">.fixed</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">fixed</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">bottom</span><span class="p">:</span> <span class="m">0</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">right</span><span class="p">:</span> <span class="m">0</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">background-color</span><span class="p">:</span> <span class="no">green</span><span class="p">;</span><br><span class="p">}</span></code></pre></figure>
           <p>Фіксований елемент не залишає за собою вільний простір на сторінці, де він був розташований.</p>
@@ -67,7 +68,7 @@
           <div class="visual"><span class="label">&lt;div&gt;</span>
             <p>В нього тепер своє життя</p><span class="label">&lt;/div&gt;</span>
           </div>
-          <h2>absolute</h2>
+          <h2 class="title" id="absolute">absolute</h2>
           <p><code>absolute</code> поводиться як <code>fixed</code> за винятком того, що позиціювання відраховується щодо найближчого розташованого, <b>позиціонованого</b> батька а не щодо вікна браузера. Якщо елемент абсолютно позиціонується і не має батька, то він використовує тіло документа і продовжує рухатись разом з усією сторінкою при скролінгу. Пам'ятайте, що "позиціонований" елемент - це елемент з будь-яким значенням властивості <code>position</code> крім значення <code>static</code>.</p>
           <figure class="code"><pre><code class="language-css" data-lang="css"><span class="nc">.relative</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">relative</span><span class="p">;</span><br><span class="p">}</span><span class="nc"><br><br>.absolute</span> <span class="p">{<br>&emsp;&emsp;&emsp;</span><span class="nl">position</span><span class="p">:</span> <span class="nb">absolute</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">top</span><span class="p">:</span> <span class="m">0</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">right</span><span class="p">:</span> <span class="m">100px</span><span class="p">;</span><br><span class="p">}</span></code></pre></figure>
           <div class="visual"><span class="label">&lt;div class="relative"&gt;</span>
@@ -94,7 +95,7 @@
               </div>
             </div>
           </section>
-          <h2 class="title">Вертикальне / горизонтальне вирівнювання.</h2>
+          <h2 class="title" id="alignment">Вертикальне / горизонтальне вирівнювання.</h2>
           <p>В CSS є всього кілька технік центрування елементів. Якщо їх знати, то більшість завдань вирішуються просто.</p>
           <h2>Горизонтальне вирівнювання</h2>
           <p>Для центрування <code>inline</code>, <code>inline-block</code> елементів - досить поставити батьківському блокові text-align: center;</p>
@@ -114,7 +115,7 @@
               </div><span class="label">&lt;/div&gt;</span>
             </div><span class="label">&lt;/div&gt;</span>
           </div>
-          <h2>Вертикальне вирівнювання</h2>
+          <h2 class="title" id="vertical-alignment">Вертикальне вирівнювання</h2>
           <p>Вертикальне вирівнювання з початку не було передбачено в специфікації CSS і донині викликає ряд проблем.</p>
           <h3>вирівнювання з position: absolute;</h3>
           <figure class="code"><pre><code><span class="nc">.wrap</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">relative</span><span class="p">;</span><br><span class="p">}</span><br><br><span class="nc">.inner-1</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">absolute</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">top</span><span class="p">:</span> <span class="nb">50%</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">height</span><span class="p">:</span> <span class="nb">120px</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">margin-top</span><span class="p">:</span> <span class="nb">-60px</span><span class="p">;</span> <span class='com'>/* або top: calc(50% - 60px); */</span><br><span class="nl"><span class="p">}</span><br><br><span class="nc">.inner-2</span> <span class="p">{</span><br>&emsp;&emsp;&emsp;<span class="nl">position</span><span class="p">:</span> <span class="nb">absolute</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">top</span><span class="p">:</span> <span class="nb">50%</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">left</span><span class="p">:</span> <span class="nb">50%</span><span class="p">;</span><br>&emsp;&emsp;&emsp;<span class="nl">transform</span><span class="p">:</span> <span class="nb">translate(-50%)</span><span class="p">;</span><span class="nl"><br><span class="p">}</span></code></pre></figure>
@@ -147,7 +148,7 @@
               </div><span class="label">&lt;/div&gt;</span>
             </div>
           </div>
-          <h2>Вирівнювання в тексті</h2>
+          <h2 class="title" id="text-alignment">Вирівнювання в тексті</h2>
           <p>Для інлайнових елементів <code>display: inline / inline-block</code>, включаючи картинки, властивість vertical-align центрує сам інлайн-елемент в навколишньому його тексті, <code>inline</code> i <code>inline-block</code> елементах.</p>
           <p class="vertical-text"><code>baseline</code> (за замовчуванням) <span class='vimg' style='vertical-align:baseline'></span><br><code>top</code> зверху <span class='vimg' style='vertical-align:top'></span><br><code>bottom</code> знизу <span class='vimg' style='vertical-align:bottom'></span><br> <code>middle</code> (по середині) <span class='vimg' style='vertical-align:middle'></span><br><code>sub</code> на рівні <sub>саб елемент</sub> <span class='vimg' style='vertical-align:sub'></span><br> <code>super</code> на рівні <sup>саб елемент</sup> <span class='vimg' style='vertical-align:super'></span><br> <code>text-top</code> (верхня границя на рівні з текстоМ) <span class='vimg' style='vertical-align:text-top'></span><br> <code>text-bottom</code> (нижня границя на рівні з текстоМ) <span class='vimg' style='vertical-align:text-bottom'></span>
             <ul>
@@ -157,7 +158,7 @@
               <li>Ну а якщо вам пощастило настільки, що не потрібно підтримувати старі версії браузера IE, то, звичайно, краще використовувати <code>Flexbox</code>.</li>
             </ul>
           </p>
-          <h2 class="title">Float</h2>
+          <h2 class="title" id="float">Float</h2>
           <p><span class='orange-text'>float</span>: left | right | none | inherit;</p>
           <p>При застосуванні цієї властивості відбувається наступне:
             <ol>
@@ -200,6 +201,19 @@
           </div>
         </div>
       </div>
+      <section class="aside-bar">
+        <ul class="theme-list">
+          <li class="theme-item"><a href="#static">static</a></li>
+          <li class="theme-item"><a href="#relative">relative</a></li>
+          <li class="theme-item"><a href="#fixed">fixed</a></li>
+          <li class="theme-item"><a href="#absolute">absolute</a></li>
+          <li class="theme-item"><a href="#alignment">Горізонтальне/Вертикальне вірівнювання</a></li>
+          <li class="theme-item"><a href="#vertical-alignment">Вертикальне виривнювання</a></li>
+          <li class="theme-item"><a href="#text-alignment">Виривнювання тексту</a></li>
+          <li class="theme-item"><a href="#float">float</a></li>
+        </ul>
+        <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
+      </section>
     </main>
     <script src="./js/libs/jquery/jquery.min.js"></script>
     <script src="./js/main.js"></script>
