--- a/media.html
+++ b/media.html
@@ -187,7 +187,7 @@
           <li class="theme-item"><a href="#device-types">Типи пристроїв</a></li>
           <li class="theme-item"><a href="#device-options">Характеристіки прістроїв</a></li>
         </ul>
-        <div class="slide-btn"></div>
+        <div class="slide-btn"><span class="fa fa-arrow-left"></span></div>
       </section>
     </main>
     <script src="./js/libs/jquery/jquery.min.js"></script>
