--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="home-card">
         <h2 class="card-title"><a href="./html/html/index.html">HTML</a></h2>
         <ul class="theme-list">
-          <li class="theme-item"><a href="./hyperlinks.html">Ссилка</a></li>
+          <li class="theme-item"><a href="./html/html/a.html">Ссилка</a></li>
           <li class="theme-item"><a href="./html/html/attr.html">Атрибути</a></li>
           <li class="theme-item"><a href="./html/html/h.html">Заголовки</a></li>
           <li class="theme-item"><a href="./html/html/img-audio-video.html">Аудіо/Відео</a></li>
