--- a/measurement.html
+++ b/measurement.html
@@ -18,20 +18,20 @@
   <body rel="slickScroll">
     <nav class="nav-menu"><a class="home-link" href="index.html">home</a>
       <ol class="nav-list">
-        <li><a class="nav-link" href="selectors.html">Селектори, Псевдокласи, Каскадність, Псевдоелементи</a></li>
-        <li><a class="nav-link" href="css_boxmodel.html">СSS Box model</a></li>
-        <li><a class="nav-link" href="measurement.html">Одиниці виміру</a></li>
-        <li><a class="nav-link" href="position.html">Позиціонування</a></li>
-        <li><a class="nav-link" href="fonts.html">Стилізація тексту</a></li>
-        <li><a class="nav-link" href="block_style.html">Стилізація елементів</a></li>
-        <li><a class="nav-link" href="media.html">@media</a></li>
-        <li><a class="nav-link" href="transform.html">Трансформація</a></li>
-        <li><a class="nav-link" href="animations.html">Анімація (2D, 3D)</a></li>
-        <li><a class="nav-link" href="flexbox.html">Flex-box</a></li>
-        <li><a class="nav-link" href="#">Display</a></li>
-        <li><a class="nav-link" href="#">Префікси</a></li>
-        <li><a class="nav-link" href="#">SVG</a></li>
-        <li><a class="nav-link" href="#">Спрайти</a></li>
+        <li><a class="nav-link" href="selectors.html"><span>Селектори, Псевдокласи, Каскадність, Псевдоелементи</span></a></li>
+        <li><a class="nav-link" href="css_boxmodel.html"><span>СSS Box model</span></a></li>
+        <li><a class="nav-link" href="measurement.html"><span>Одиниці виміру</span></a></li>
+        <li><a class="nav-link" href="position.html"><span>Позиціонування</span></a></li>
+        <li><a class="nav-link" href="fonts.html"><span>Стилізація тексту</span></a></li>
+        <li><a class="nav-link" href="block_style.html"><span>Стилізація елементів</span></a></li>
+        <li><a class="nav-link" href="media.html"><span>@media</span></a></li>
+        <li><a class="nav-link" href="transform.html"><span>Трансформація</span></a></li>
+        <li><a class="nav-link" href="animations.html"><span>Анімація (2D, 3D)</span></a></li>
+        <li><a class="nav-link" href="flexbox.html"><span>Flex-box</span></a></li>
+        <li><a class="nav-link" href="#"><span>Display</span></a></li>
+        <li><a class="nav-link" href="#"><span>Префікси</span></a></li>
+        <li><a class="nav-link" href="#"><span>SVG</span></a></li>
+        <li><a class="nav-link" href="#"><span>Спрайти</span></a></li>
       </ol>
     </nav>
     <main class="main-content css-tutorial">
